test/bad/type_missmatch_22.mpp
fun bar():int {
    var x:int;
    begin
        x := 2;
        return float(x);
    end
};
